--- a/date/2025-12/page-3.htm
+++ b/date/2025-12/page-3.htm
@@ -125,6 +125,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-7-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="12月7日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-7-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月7日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、香港、韩国、欧洲、美国、加拿大等地区,最高速度可达20.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="12月6日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月6日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、美国、日本、香港、新加坡、韩国、加拿大等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-12-05">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-12-5-node-share.htm" class="xcblog-blog-url">
@@ -205,16 +233,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-12-free-subscribe-node.htm" title="11月12日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址">11月12日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-21-free-node-subscribe-links.htm" title="12月21日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">12月21日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-free-subscribe-node.htm" title="11月7日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">11月7日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-free-node-subscribe-links.htm" title="12月11日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">12月11日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-13-node-share.htm" title="11月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">11月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-19-node-share-links.htm" title="11月19日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">11月19日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-high-speed-nodes.htm" title="12月8日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址">12月8日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-18-free-node-subscribe.htm" title="11月18日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">11月18日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-26-node-share-links.htm" title="11月26日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">11月26日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-2-free-high-speed-nodes.htm" title="12月2日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">12月2日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-15-free-high-speed-nodes.htm" title="12月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-19-node-share-links.htm" title="12月19日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">12月19日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-high-speed-nodes.htm" title="12月8日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址">12月8日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-node-share-links.htm" title="12月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">12月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-9-node-share.htm" title="12月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">12月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-high-speed-nodes.htm" title="11月8日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">11月8日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-30-free-subscribe-node.htm" title="11月30日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">11月30日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-node-share-links.htm" title="11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -226,7 +254,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
