--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -3,7 +3,7 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io/free-nodes/page-5.htm" />
-    <title>Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第4页</title>
+    <title>Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第6页</title>
         <meta name="keywords" content="Sockscap64, 免费节点, V2ray订阅, Clash节点, 科学上网" />
         <meta name="description" content="Sockscap64提供精选免费节点，支持V2ray和Clash订阅，保证节点稳定高速，每日更新，让科学上网更加顺畅。" />
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
@@ -12,7 +12,7 @@
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io/free-nodes/page-5.htm" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第4页" />
+    <meta property="og:title" content="Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第6页" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
         <meta property="og:description" content="Sockscap64提供精选免费节点，支持V2ray和Clash订阅，保证节点稳定高速，每日更新，让科学上网更加顺畅。" />
         
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第6页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -124,6 +124,48 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-15">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-15-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="11月15日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-15-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月15日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、日本、加拿大、香港、美国、欧洲、新加坡等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-14">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-14-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7b3a608463b7f9e8c651a30f75e14e8f.webp" alt="11月14日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-14-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月14日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、美国、韩国、欧洲、新加坡、加拿大、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-13">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-13-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7b3a608463b7f9e8c651a30f75e14e8f.webp" alt="11月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-13-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、日本、美国、韩国、新加坡、欧洲、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-12">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-11-12-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -222,22 +264,8 @@
                                     这一次的节点更新覆盖了加拿大、新加坡、韩国、日本、美国、欧洲、香港等地区,最高速度可达19.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-05">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-11-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-11-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、香港、韩国、加拿大、美国、日本、新加坡等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/page-4.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li class="active"><span>5</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/page-4.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li class="active"><span>5</span></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-6.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -246,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="11月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">11月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-23-node-share-links.htm" title="11月23日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">11月23日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-22-free-node-subscribe.htm" title="12月22日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月22日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-17-free-node-subscribe.htm" title="11月17日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">11月17日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-10-free-high-speed-nodes.htm" title="12月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">12月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-4-free-node-subscribe.htm" title="12月4日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">12月4日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-node-subscribe-links.htm" title="11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-9-free-subscribe-node.htm" title="11月9日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">11月9日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-subscribe-node.htm" title="12月25日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">12月25日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-6-free-subscribe-node.htm" title="12月6日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">12月6日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-13-node-share.htm" title="11月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">11月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-26-node-share-links.htm" title="11月26日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">11月26日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-14-free-subscribe-node.htm" title="11月14日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">11月14日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-node-share.htm" title="12月26日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">12月26日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-22-node-share-links.htm" title="11月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">11月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-node-share-links.htm" title="11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-14-free-node-subscribe-links.htm" title="12月14日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月14日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-node-subscribe.htm" title="12月13日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">12月13日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-15-free-node-subscribe-links.htm" title="11月15日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">11月15日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -267,7 +295,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
